WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171466
Address comments in review for
r215955
https://bugs.webkit.org/show_bug.cgi?id=171466
Summary
Address comments in review for r215955
youenn fablet
Reported
2017-04-28 17:15:00 PDT
Readd assertion removed accidentally in
r215955
Attachments
Patch
(1.58 KB, patch)
2017-04-28 17:15 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(3.17 KB, patch)
2017-04-28 17:25 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(6.33 KB, patch)
2017-04-28 17:38 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-04-28 17:15:55 PDT
Created
attachment 308624
[details]
Patch
youenn fablet
Comment 2
2017-04-28 17:25:45 PDT
Created
attachment 308628
[details]
Patch
youenn fablet
Comment 3
2017-04-28 17:38:04 PDT
Created
attachment 308631
[details]
Patch
WebKit Commit Bot
Comment 4
2017-04-28 17:39:11 PDT
Comment on
attachment 308631
[details]
Patch Rejecting
attachment 308631
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 308631, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/3629986
youenn fablet
Comment 5
2017-04-28 18:40:43 PDT
Thanks !
WebKit Commit Bot
Comment 6
2017-04-29 20:30:35 PDT
Comment on
attachment 308631
[details]
Patch Clearing flags on attachment: 308631 Committed
r215980
: <
http://trac.webkit.org/changeset/215980
>
WebKit Commit Bot
Comment 7
2017-04-29 20:30:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug