Readd assertion removed accidentally in r215955 https://bugs.webkit.org/show_bug.cgi?id=171466

Patch by Youenn Fablet <youenn@apple.com> on 2017-04-29
Reviewed by Eric Carlson.

Source/WebCore:

Unreviewed.

* platform/mediastream/mac/MockRealtimeVideoSourceMac.mm:
(WebCore::MockRealtimeVideoSourceMac::orientationChanged): Improved FIXME after review.

Source/WebKit2:

* WebProcess/WebPage/WebBackForwardListProxy.cpp:
(WebKit::WebBackForwardListProxy::addItemFromUIProcess):

Canonical link: https://commits.webkit.org/188371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215980 268f45cc-cd09-0410-ab3c-d52691b4dbfc